# groq-whisper-mcp

./: README.md  pyproject.toml  run-mcp.sh
src/: __init__.py  client.py  server.py
tests/: test_client.py  test_server.py
